LPS-51081 Make overridable from gradle.properties